Byte class - checkNullBits for constructor to assure that Byte object do not contain null references